# gst-plugins-ugly

./: configure.ac  meson.build
docs/: meson.build
ext/: meson.build
ext/a52dec/: meson.build
ext/amrnb/: meson.build
ext/amrwbdec/: meson.build
ext/cdio/: meson.build
ext/dvdread/: meson.build
ext/mpeg2dec/: meson.build
ext/sidplay/: meson.build
ext/x264/: GstX264Enc.prs  gstx264enc.c  meson.build
gst/: meson.build
tests/: meson.build
tests/check/: meson.build
