subdir('a52dec', components: [plugins_component])
subdir('amrnb', components: [plugins_component])
subdir('amrwbdec', components: [plugins_component])
subdir('cdio', components: [plugins_component])
subdir('dvdread', components: [plugins_component])
subdir('mpeg2dec', components: [plugins_component])
subdir('sidplay', components: [plugins_component])
subdir('x264', components: [plugins_component])
