subdir('asfdemux', components: [plugins_component, component('asfdemux')])
subdir('dvdlpcmdec', components: [plugins_component, component('dvdlpcmdec')])
subdir('dvdsub', components: [plugins_component, component('dvdsub')])
subdir('realmedia', components: [plugins_component, component('realmedia')])
subdir('xingmux', components: [plugins_component, component('xingmux')])
